--- a/css/style.css
+++ b/css/style.css
@@ -221,22 +221,76 @@ header ul li a:hover {
 }
 
 /*===== Service =====*/
-
 #services {
+    padding: 50px 0px;
+    background: #DEE6F3;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+.services1 {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    gap: 50px;
+}
+
+#services .services2 {
+    position: relative;
+    display: none;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 30px 50px;
-    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #4269F5;
+    align-content: center;
+}
+
+.service-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 100px;
+    align-self: flex-end;
+}
+
+.service-des {}
+
+.service-container2 {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 100px;
+    align-self: flex-start;
+}
+
+.service-pic {
+    align-content: center;
+    align-items: center;
+}
+
+.service-pic img {
+    width: 300px;
+}
+
+.titles {
+    color: #285AEB;
+    letter-spacing: 1px;
+    font-size: 38px;
 }
 
 .title {
     text-transform: uppercase;
-    color: #ffffff;
+    color: #285AEB;
     letter-spacing: 1px;
     font-size: 38px;
 }
@@ -780,6 +834,14 @@ header ul li a:hover {
 
     .donasi-container {
         gap: 10px;
+    }
+
+    .services2 {
+        display: block !important;
+    }
+
+    .services1 {
+        display: none;
     }
 
 }
